--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div id="app">
         <header class="container">
             <nav>
-                <img src="./assets/camera.svg" alt="Imagem da logomarca">
+                <img class="logo" src="./assets/camera.svg" alt="Imagem da logomarca">
                 <ul>
                     <li>Home</li>
                     <li class="active">Galeria</li>
@@ -40,31 +40,31 @@
                     <figure class="item">
                         <img src="https://source.unsplash.com/random?a=1" alt="Imagem aleatoria">
                         <figcaption class="details">
-                            <h2>Organização e grids</h2>
+                            <h2>Workspace elétrica</h2>
                             <div class="tags">
                                 <span>tag </span>
                             </div>
                         </figcaption>
                     </figure>
-                    <figure class="item">
+                    <figure class="item" style="--delay:.6s">
                         <img src="https://source.unsplash.com/random?b=1" alt="Imagem aleatoria">
                         <figcaption class="details">
-                            <h2>Organização e grids</h2>
+                            <h2>Ergonomia e cores</h2>
                             <div class="tags">
                                 <span>tag </span>
                             </div>
                         </figcaption>
                     </figure>
-                    <figure class="item">
+                    <figure class="item" style="--delay:.8s">
                         <img src="https://source.unsplash.com/random?c=1" alt="Imagem aleatoria">
                         <figcaption class="details">
-                            <h2>Organização e grids</h2>
+                            <h2>Dark and Red</h2>
                             <div class="tags">
                                 <span>tag </span>
                             </div>
                         </figcaption>
                     </figure>
-                    <figure class="item">
+                    <figure class="item" style="--delay:1s">
                         <img src="https://source.unsplash.com/random?d=1" alt="Imagem aleatoria">
                         <figcaption class="details">
                             <h2>Organização e grids</h2>
@@ -73,19 +73,19 @@
                             </div>
                         </figcaption>
                     </figure>
-                    <figure class="item">
+                    <figure class="item" style="--delay:1.2s">
                         <img src="https://source.unsplash.com/random?e=1" alt="Imagem aleatoria">
                         <figcaption class="details">
-                            <h2>Organização e grids</h2>
+                            <h2>Colméia</h2>
                             <div class="tags">
                                 <span>tag </span>
                             </div>
                         </figcaption>
                     </figure>
-                    <figure class="item">
+                    <figure class="item" style="--delay:1.4s">
                         <img src="https://source.unsplash.com/random?f=1" alt="Imagem aleatoria">
                         <figcaption class="details">
-                            <h2>Organização e grids</h2>
+                            <h2>Setup de escritor</h2>
                             <div class="tags">
                                 <span>tag </span>
                             </div>
